--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "cathalab-system",
   "version": "1.0.0",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "next": "^13.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "next-auth": "^4.22.1"
   }
 }
